Resuelto problema de import de react

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html{
 
 body{
   margin: 0;
-  background-color: red;
+  /* background-color: red; */
   font-family: sans-serif;
   width: 100%;
 }
